--- a/ui/src/assets/_btn.css
+++ b/ui/src/assets/_btn.css
@@ -6,7 +6,7 @@
   background-color: var(--primary-color);
   color: var(--light-color);
   font: inherit;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
   text-decoration: none;
   cursor: pointer;
   text-transform: uppercase;
@@ -41,7 +41,7 @@
 }
 
 .btn--compose {
-  font-size: 2.8rem;
+  font-size: 2.3rem;
   padding: 0em 0.5em;
   border-radius: 18px;
 }
